# IKT469-Task-7-Multimodal-Architectures-

./: .gitignore  README.md  experiments.ipynb  main.py  pyproject.toml
dataset/: __init__.py
results/: fusion-early.json  fusion-gmu.json  fusion-late.json  image-only.json  selfsup-contrastive-20.json  semi-baseline-20.json  semi-meanteacher-20.json  semi-pseudo-20.json  text-only.json
src/combiner/: classfier.py  classifier.py  moe.py
src/data/: dataset.py  get.py  hdf5_loader.py  loader.py
src/encoders/: image.py  text.py
src/fusion/: early.py  gmu.py  late.py  unimodal.py
src/models/: encoders.py  fusion.py  semi_supervised.py
src/ssl/: contrastive.py  mean_teacher.py  pseudo_label.py
src/training/: evaluate.py  semi_sup_trainer.py  trainer.py
src/training/semi-supervised/: train.py
src/training/semi_supervised/: train.py
src/training/supervised/: train.py
src/utils/: metrics.py
tests/: test_classifier.py  test_contrastive.py  test_evaluate.py  test_fusion.py  test_hdf5_loader.py  test_mean_teacher.py  test_pseudo_label.py
